SCRUM-5: Add JavaDoc comments